k8s/infra/databases/nacos/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nacos
  namespace: cwx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nacos
  template:
    metadata:
      labels:
        app: nacos
    spec:
      containers:
      - name: nacos
        image: harbor.chenwx.top/docker.io/nacos/nacos-server:v2.4.3
        resources:
          requests:
            memory: "2Gi"
            cpu: "800m"
        ports:
          - containerPort: 8848
            name: client
          - containerPort: 9848
            name: client-rpc
          - containerPort: 9849
            name: raft-rpc
