k8s/infra/databases/nacos/IngressRoute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nacos
  namespace: cwx
spec:
  entryPoints:
    - websecure
  tls:
    # 强制使用这个证书
    secretName: chenwx-top-online-tls
  routes:
    - match: Host(`nacos.chenwx.top`)
      kind: Rule
      services:
        - name: nacos
          namespace: cwx
          port: 80
